# sql-explorer

./: .gitignore  @@plan.md  GEMINI.md  README.md  _commit_msg.txt  bootstrap.sh  package.json  plan.md  pnpm-lock.yaml
backend/: Cargo.toml  tauri.conf.json
backend/src/: commands.rs  db.rs  error.rs  main.rs  state.rs  storage.rs
backend/src/db/: drivers.rs
backend/src/db/drivers/: mssql.rs  mysql.rs  postgres.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.vue  env.d.ts  main.ts  style.css
frontend/src/__tests__/: App.spec.ts
frontend/src/components/: AppTreeview.vue  ConnectionDialog.vue  ConnectionForm.vue  ConnectionManager.vue  ContextMenu.vue  DbExplorer.vue  MockMonacoEditor.vue  QueryTabs.vue  QueryView.vue  SaveConnectionDialog.vue  SavedConnections.vue
frontend/src/components/__tests__/: ConnectionForm.spec.ts  ConnectionManager.spec.ts  DbExplorer.spec.ts  QueryTabs.spec.ts  QueryTabs.spec.ts.bak  SaveConnectionDialog.spec.ts  SavedConnections.spec.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/plugins/: vuetify.ts  webfontloader.ts
frontend/src/stores/: connection.ts  connectionManager.ts  explorer.ts  navigation.ts  query.ts  savedConnections.ts  tabs.ts
frontend/src/stores/__tests__/: connection.spec.ts  connectionManager.spec.ts  explorer.spec.ts  navigation.spec.ts  query.spec.ts  savedConnections.spec.ts  savedConnections.spec.ts.bak  tabs.spec.ts
frontend/src/types/: db.ts  query.ts  savedConnection.ts
frontend/src/utils/: connectionStringBuilder.ts  csvExporter.ts
frontend/src/utils/__tests__/: connectionStringBuilder.spec.ts  csvExporter.spec.ts
frontend/src/views/: ConnectionView.vue  QueryView.vue
frontend/src/views/__tests__/: ConnectionView.spec.ts  ConnectionView_SavedConnections.spec.ts  QueryView.spec.ts  QueryView.spec.ts.bak
