[package]
name = "sql-explorer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["test"] }
tiberius = { version = "0.12.2", default-features = false, features = ["chrono", "tds73", "integrated-auth-gssapi", "sql-browser-tokio", "rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
thiserror = "1.0"
keyring = "2.3"
anyhow = "1.0"
directories = "5.0"
async-trait = "0.1.89"
mysql_async = { version = "0.36.1", features = ["native-tls-tls"] }
tokio-postgres = "0.7.13"
tokio-postgres-rustls-improved = "0.16.2"
postgres-types = { version = "0.2.9", features = ["derive"] }
rustls = { version = "0.23" }
rustls-pki-types = "1.14.0"
webpki-roots = "1.0.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
dotenv = "0.15"
